# random

./: CMakeLists.txt  README.md  package.xml  wks.yml
configs/: diagonal_gmm.json  generic_gmm.json  gmm.json
examples/: expectation_maximization.cpp  generate_gmm_samples.cpp  gmm.cpp
include/rhoban_random/: expectation_maximization.h  gaussian_mixture_model.h  multivariate_gaussian.h  uniform_distribution.h
scripts/: plot_em_scores.r  plot_gmm.r
src/rhoban_random/: expectation_maximization.cpp  gaussian_mixture_model.cpp  multivariate_gaussian.cpp  sources.cmake  uniform_distribution.cpp
tests/: gaussian_mixture_model.cpp
